Added docker-compose production file with port 80 as the api endpoint
