# src/docs/swagger.json
@@ -26,10 +26,10 @@
           {
             "in": "body",
             "name": "body",
-            "description": "User credentials",
+            "description": "UserLoginParams",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/UserCredentials"
+              "$ref": "#/definitions/UserLoginParams"
             }
           }
         ],
@@ -49,7 +49,7 @@
         }
       }
     },
-    "/v1/registerUser": {
+    "/v1/user/register": {
       "post": {
         "summary": "Register user, returns new id",
         "description": "Creates new user with email and password.",
@@ -64,10 +64,10 @@
           {
             "in": "body",
             "name": "body",
-            "description": "User credentials",
+            "description": "UserRegisterParams",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/UserCredentials"
+              "$ref": "#/definitions/UserRegisterParams"
             }
           }
         ],
@@ -111,7 +111,16 @@
     }
   },
   "definitions": {
-    "UserCredentials": {
+    "Id": {
+      "type": "number"
+    },
+    "Name": {
+      "type": "string"
+    },
+    "Password": {
+      "type": "string"
+    },
+    "UserLoginParams": {
       "type": "object",
       "required": [
         "username",
@@ -119,10 +128,37 @@
       ],
       "properties": {
         "username": {
-          "type": "string"
+          "$ref": "#/definitions/Name"
         },
         "password": {
-          "type": "string"
+          "$ref": "#/definitions/Password"
+        }
+      }
+    },
+    "UserRegisterParams": {
+      "type": "object",
+      "required": [
+        "username",
+        "password",
+        "fistname",
+        "lastname",
+        "organizationId"
+      ],
+      "properties": {
+        "username": {
+          "$ref": "#/definitions/Name"
+        },
+        "password": {
+          "$ref": "#/definitions/Password"
+        },
+        "firstname": {
+          "$ref": "#/definitions/Name"
+        },
+        "lastname": {
+          "$ref": "#/definitions/Name"
+        },
+        "organizationId": {
+          "$ref": "#/definitions/Name"
         }
       }
     },
